# haskell-from-first-principles-notes

./: .gitignore  README.md
Ch11/: Ch11.hs
Ch13/: Ch13.hs
Ch13/hangman/: hangman.cabal
Ch13/hangman/src/: Main.hs
Ch14/Addition/: Addition.cabal  Addition.hs
Ch15/: AnotherMonoid.hs  BetterLiving.hs  FP.hs  Madness.hs  Monoid.hs  Optional.hs  Semigroups.hs
Ch16/: ChExercises.hs  HeavyLifting.hs  QuickcheckFunctor.hs  ReplaceExperiment.hs  chained_fmap.txt
Ch17/: ChExercs.hs  constant.hs  fixerupper.hs  identity.hs  lookup1.hs  lookup3.hs  lookup4.hs
Ch17/CheckersTest/: CheckersTest.cabal  LICENSE  README.md
Ch17/CheckersTest/app/: Main.hs
Ch17/CheckersTest/src/: BadMonoid.hs
Ch17/ListAppl/: ListAppl.cabal  README.md
Ch17/ListAppl/app/: Main.hs
Ch17/ListAppl/src/: ListAppl.hs  ZipListAppl.hs
Ch17/ListAppl/test/: Spec.hs
Ch17/ValidationAppl/: README.md  ValidationAppl.cabal
Ch17/ValidationAppl/app/: Main.hs
Ch17/ValidationAppl/src/: Validation.hs
Ch17/ValidationAppl/test/: Spec.hs
Ch18/: BadMonad.hs  Composition.hs  Cow.hs  EitherMonad.hs  IdentityMonad.hs  IntsKicking.hs  ListMonad.hs  NopeMonad.hs  PhhhbbtttEitherMonad.hs  Scribble.hs  Sum.hs
Temp/: Temp10.hs  Temp2.hs  Temp4.hs  Temp5.hs  Temp6.hs  Temp7.hs  Temp8.hs  Temp9.hs  temp.hs  temp3.hs
