name:                Addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/holleB/Addition#readme
license:             BSD3
license-file:        LICENSE
author:              Holger Buchholz
maintainer:          holger@holger.me
copyright:           GPL3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:  Addition
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >= 4.7 && < 5
                  , hspec
  hs-source-dirs:   .
  default-language: Haskell2010