name:                ValidationAppl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/holleB/ValidationAppl#readme
license:             BSD3
license-file:        LICENSE
author:              Holger Buchholz
maintainer:          holger@holger.me
copyright:           GPL3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Validation
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , checkers
  default-language:    Haskell2010

executable ValidationAppl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ValidationAppl
  default-language:    Haskell2010

test-suite ValidationAppl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ValidationAppl
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/holleB/ValidationAppl
